# src/api/index.ts
@@ -2,6 +2,7 @@ import { Router } from 'express';
 
 import categories from './routes/admin/categories';
 import brands from './routes/admin/brands';
+import products from './routes/admin/products';
 
 export default () => {
   const app = Router();
@@ -9,6 +10,7 @@ export default () => {
   // admin routes
   categories(app);
   brands(app);
+  products(app);
 
   return app;
 };
