# src/api/requests/admin/index.ts
@@ -2,10 +2,12 @@ import { createCategorySchema } from './categories/create';
 import { updateCategorySchema } from './categories/update';
 import { createBrandSchema } from './brands/create';
 import { updateBrandSchema } from './brands/update';
+import { createProductSchema } from './products/create';
 
 export default {
   createCategorySchema,
   updateCategorySchema,
   createBrandSchema,
   updateBrandSchema,
+  createProductSchema,
 };
